@startuml
' MCD - vocabulaire MERISE uniquement

entity "Film" as Film {
  *id_film : Identifiant
  --
  titre : Attribut
  annee_sortie : Attribut
  synopsis : Attribut
}

entity "Realisateur" as Realisateur {
  *id_realisateur : Identifiant
  --
  nom : Attribut
}

entity "Genre" as Genre {
  *id_genre : Identifiant
  --
  libelle : Attribut
}

entity "Utilisateur" as Utilisateur {
  *id_utilisateur : Identifiant
  --
  pseudo : Attribut
}

entity "Avis" as Avis {
  *id_avis : Identifiant
  --
  note : Attribut
  commentaire : Attribut
}

Realisateur "0,n" -- "1,1" Film : Realiser
Film "0,n" -- "0,n" Genre : Classer
Film "1,1" -- "0,n" Avis : Recevoir
Utilisateur "1,1" -- "0,n" Avis : Publier

@enduml
